# gap-buf-rs

./: Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/benches/: benches.rs
examples/: simple.rs
src/: gap_buffer.rs  lib.rs
tests/: tests.rs  tests_proptest.rs
