[package]
name = "gap-buf"
version = "0.1.0"
authors = ["FrozenLib", "AhoyISki"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AhoyISki/gap-buf-rs"
documentation = "https://docs.rs/gap-buf/"
keywords = ["gap", "gapbuffer"]
categories = ["data-structures"]
description = "Generic gap buffer."
edition = "2024"

[features]
docs-rs = []

[dev-dependencies]
test-strategy = "0.2.0"
proptest = "1.0.0"

[package.metadata.docs.rs]
features = ["docs-rs"]
