[package]
name = "gap-buf"
version = "0.3.0"
authors = ["FrozenLib", "AhoyISki"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AhoyISki/gap-buf-rs"
documentation = "https://docs.rs/gap-buf/"
keywords = ["gap", "gapbuffer"]
categories = ["data-structures"]
description = "Generic gap buffer."
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", optional = true }
unty = "0.0.5"

[dev-dependencies]
test-strategy = "0.2.0"
proptest = "1.0.0"

[features]
default = ["bincode"]
docs-rs = []
bincode = ["dep:bincode"]

[package.metadata.docs.rs]
features = ["docs-rs"]
